--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src = "create promise.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script src = "create promise.js"></script>
+   
 </body>
 </html>
